--- a/src/entries/style.scss
+++ b/src/entries/style.scss
@@ -1,6 +1,171 @@
+body,
+input:placeholder {
+  font-family: Monospaced Number,Chinese Quote,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,PingFang SC,Hiragino Sans GB,Microsoft YaHei,Helvetica Neue,Helvetica,Arial,sans-serif;
+}
+
+html {
+  height: 100%;
+  font-size: 100px;
+}
+
+button {
+  cursor: pointer;
+}
+
+body {
+  color: rgba($color: #fff, $alpha: 0.85);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-size: 0.16rem;
+  height: 100%;
+}
+
+#inviteAddress,
+#ethAddress,
+#ethAddressResult,
+#codeResult {
+  font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,Courier,monospace;
+}
+
+.bg-top {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 60%;
+}
+
+.p1 {
+  text-align: center;
+  position: relative;
+  z-index: 1;
+}
+
+#logo {
+  max-width: 4.2rem;
+  width: 90%;
+  margin-bottom: 0.48rem;
+}
+
 #main {
-  padding: 16px;
+  min-height: 100%;
+  padding: 0.48rem 0.16rem;
+  box-sizing: border-box;
+  background-image: url(../assets/bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .card {
-  margin-bottom: 16px;
+  margin-bottom: 0.16rem;
+  border: #418286 solid 1px;
+  border-radius: 0.04rem;
+  text-align: left;
+  
+  .card-header {
+    background: #418286;
+    color: #fff;
+    padding: 0.08rem;
+  }
+
+  .card-body-footer {
+    text-align: right;
+
+    button {
+      height: 0.3rem;
+      box-sizing: border-box;
+      border: none;
+      padding: 0 0.16rem;
+      background-color: #418286;
+      border-radius: 0.03rem;
+      color: #fff;
+    }
+  }
+
+  .card-body {
+    padding: 0.08rem;
+
+    p {
+      word-break: break-all;
+    }
+  }
+}
+
+#inputArea {
+  display: flex;
+  justify-content: center;
+
+  & > * {
+    height: 0.4rem;
+    box-sizing: border-box;
+    border: none;
+  }
+
+  input {
+    width: 6rem;
+    padding: 0.08rem 0.12rem;
+    border-radius: 0.04rem 0 0 0.04rem;
+  }
+
+  button {
+    width: 1.6rem;
+    background-color: #418286;
+    border-radius: 0 0.04rem 0.04rem 0;
+    color: #fff;
+  }
+}
+
+.p1 {
+  width: 100%;
+  max-width: 7.6rem;
+  padding-bottom: 0.5rem;
+
+  .step-p {
+    text-align: left;
+    color: #5A9BA9;
+    padding-left: 0;
+    counter-reset: sectioncounter;
+    list-style-type: none;
+
+    li {
+      margin-bottom: 0.08rem;
+    }
+
+    li:before {
+      font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,Courier,monospace;
+      content: counter(sectioncounter) "."; 
+      counter-increment: sectioncounter;
+    }
+  }
+
+  .step-p-tag {
+    background: #418286;
+    color: #fff;
+    padding: 0.04rem 0.08rem;
+    border-radius: 0.02rem;
+    font-size: 0.12rem;
+    margin: 0 0.04rem;
+  }
+}
+
+#inviteAddress {
+  margin-top: 0.08rem;
+}
+
+@media screen and (max-width: 820px) {
+  #inputArea {
+    display: block;
+
+    input,
+    button {
+      width: 100%;
+      border-radius: 0.04rem;
+    }
+
+    input {
+      margin-bottom: 0.24rem;
+    }
+  }
 }
